<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Welcome</string>
    <string name="message_welcome_page">Capture your happy moments on StroryApp</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="name_cannot_empty">Name Cannot Empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="email_must_be_filled">Email must be filled</string>
    <string name="password_cannot_empty">Password Cannot Empty</string>
    <string name="invalid_input_data">Invalid Input Data</string>
    <string name="must_6_character">Must 6 Character</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="failed_upload">Failed to Upload Image</string>
    <string name="enter_description">Enter Description</string>
    <string name="stories_image">Stories Image</string>
    <string name="description">Description</string>
    <string name="no_stories">No Stories</string>
    <string name="attention">Put Image/Take a Picture</string>
    <string name="failed_title">FAILED</string>
    <string name="wrong_input">Email or Password is wrong!</string>
    <string name="permission">Not Getting Permissions</string>
    <string name="not_get_pict">Not Getting Picture</string>
    <string name="failed_camera">Failed To Bring Up The Camera</string>
    <string name="input_image_first">Input Image First!</string>
    <string name="picture">Picture</string>
    <string name="isBackCamera">isBackCamera</string>
    <string name="title_signup_page">Please Fill In Your Personal Data</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">Map</string>
    <string name="retry">Retry</string>
</resources>