<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:menuCategory="container">
        <item
            android:id="@+id/navigation_addstory"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/add_story"
            app:showAsAction="always"/>

        <item
            android:id="@+id/navigation_maps"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/maps"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"
            app:showAsAction="always"/>
    </group>

</menu>